# toronto_trains_subway_delay

./: README.md  main.py  pyproject.toml
data/processed/: combined_df.csv  processed_df.csv
notebooks/: 1.DataAnalysis.ipynb  1.InitialDataAnalysis.ipynb  2.FeatureEngineering.ipynb  3.Plotting.ipynb
src/: analyse.py  data_loader.py  feature_engineering.py  ingest_data.py
