[tool]
[tool.poetry]
name = ""
version = "0.1.0"
homepage = "https://github.com/ashishthanki/toronto_trains_subway_delay"
description = "Top-level package for Toronoto Delays Analysis."
authors = ["Ashish Thanki"]
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]


[tool.poetry.dependencies]
python = "3.10.11"
click = "*"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
numpy = "^1.24.2"
seaborn = "^0.12.2"
jupyterlab = "^3.6.3"
openpyxl = "^3.1.2"
hvplot = "^0.8.4"
holoviews = "^1.17.1"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
